# continuate

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  deny.toml  flake.nix
.github/workflows/: CI.yml
continuate/: Cargo.toml
continuate-arena/: Cargo.toml
continuate-arena-macros/: Cargo.toml
continuate-arena-macros/src/: handle_self.rs  lib.rs
continuate-arena/src/: arena_safe.rs  lib.rs  tests.rs
continuate-backend/: Cargo.toml
continuate-backend/src/: function.rs  jit.rs  lib.rs  linked_list.rs  object.rs  storage.rs
continuate-cli/: Cargo.toml
continuate-cli/src/: main.rs
continuate-common/: Cargo.toml
continuate-common/src/: lib.rs
continuate-error/: Cargo.toml
continuate-error/src/: lib.rs
continuate-frontend/: Cargo.toml
continuate-frontend/src/: lexer.rs  lib.rs  name_resolution.rs  parser.rs
continuate-ir/: Cargo.toml
continuate-ir/src/: bimap.rs  common.rs  high_level_ir.rs  ir_interpreter.rs  lib.rs  lib_std.rs
continuate-ir/src/high_level_ir/: lowering.rs  mod.rs  typeck.rs
continuate-ir/src/low_level_ir/: lowering.rs  mod.rs
continuate-ir/src/mid_level_ir/: interpreter.rs  lowering.rs  mod.rs
continuate-ir/src/mid_level_ir/visit/: combine_call_application.rs  mod.rs
continuate-rt/: Cargo.toml
continuate-rt-common/: Cargo.toml
continuate-rt-common/src/: lib.rs
continuate-rt/src/: garbage_collector.rs  layout.rs  lib.rs  slice.rs
continuate-rt/src/garbage_collector/: mod.rs  tests.rs
continuate-utils/: Cargo.toml
continuate-utils/src/: lib.rs
continuate/src/: high_level_ir.rs  ir_interpreter.rs  lib.rs  lib_std.rs  low_level_ir.rs
continuate/src/low_level_ir/: mod.rs
programs/: basic.cont
src/: main.rs
