[package]
name = "continuate"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
continuate-arena = { version = "0.1.0", path = "./continuate-arena" }
continuate-backend = { version = "0.1.0", path = "./continuate-backend" }
continuate-common = { workspace = true }
continuate-frontend = { version = "0.1.0", path = "./continuate-frontend" }
continuate-ir = { version = "0.1.0", path = "./continuate-ir" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[workspace]
members = [
    "continuate-arena",
    "continuate-arena-macros",
    "continuate-backend",
    "continuate-common",
    "continuate-error",
    "continuate-frontend",
    "continuate-ir",
    "continuate-rt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.79"

[workspace.dependencies]
chumsky = { version = "1.0.0-alpha.7", features = ["label", "nightly"] }
continuate-arena = { version = "0.1.0", path = "./continuate-arena" }
continuate-arena-macros = { version = "0.1.0", path = "./continuate-arena-macros" }
continate-backend = { version = "0.1.0", path = "./continuate-backend" }
continuate-common = { version = "0.1.0", path = "./continuate-common" }
continuate-error = { version = "0.1.0", path = "./continuate-error" }
continuate-frontend = { version = "0.1.0", path = "./continuate-frontend" }
continuate-ir = { version = "0.1.0", path = "./continuate-ir" }
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev.package."*"]
opt-level = 3

[profile.ci]
inherits = "dev"

[profile.ci.package."*"]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
inline_always = "allow"
multiple_unsafe_ops_per_block = "deny"
must_use_candidate = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
todo = "warn"
undocumented_unsafe_blocks = "deny"
use_self = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
