[package]
name = "continuate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
continuate-backend.workspace = true 
continuate-error.workspace = true
continuate-frontend.workspace = true
continuate-ir.workspace = true
continuate-rt.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[workspace]
members = [
    "continuate-backend",
    "continuate-error",
    "continuate-frontend",
    "continuate-ir",
    "continuate-rt",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
chumsky = { version = "1.0.0-alpha.8" }
continuate-backend = { version = "0.1.0", path = "./continuate-backend", features = ["jit", "object"] }
continuate-error = { version = "0.1.0", path = "./continuate-error" }
continuate-frontend = { version = "0.1.0", path = "./continuate-frontend" }
continuate-ir = { version = "0.1.0", path = "./continuate-ir" }
continuate-rt = { version = "0.1.0", path = "./continuate-rt" }
itertools = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.dev.package."*"]
opt-level = 3

[profile.ci]
inherits = "dev"

[profile.ci.package."*"]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.lints.rust]
# missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

allow_attributes = "warn"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
missing_inline_in_public_items = "warn"
multiple_unsafe_ops_per_block = "deny"
must_use_candidate = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
semicolon_inside_block = "warn"        # Confusing name: semicolons *should* be inside the block.
todo = "warn"
undocumented_unsafe_blocks = "deny"
use_self = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
