[package]
name = "continuate-backend"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo = "3.17.0"
continuate-ir.workspace = true
continuate-rt.workspace = true
cranelift = { version = "0.119.0", features = ["jit", "module", "object"] }
itertools.workspace = true
tracing.workspace = true
target-lexicon = "0.13.2" # Must be matched to cranelift-codegen/dep:target-lexicon

[lints]
workspace = true
