[package]
name = "continuate-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo = "3.20.2"
continuate-ir.workspace = true
continuate-rt.workspace = true
cranelift = { version = "0.131.0", features = ["module"] }
itertools.workspace = true
tracing.workspace = true
target-lexicon = "0.13.5" # Must be matched to cranelift-frontend/dep:target-lexicon

[features]
jit = ["cranelift/jit"]
object = ["cranelift/object"]

[lints]
workspace = true
