[package]
name = "continuate-cli"
version = "0.1.0"
edition = "2021"
default-run = "continuate"

[dependencies]
continuate-ir = { version = "0.1.0", path = "../continuate-ir" }
continuate-arena = { version = "0.1.0", path = "../continuate-arena" }

[[bin]]
name = "continuate"
path = "src/main.rs"

[lints]
workspace = true
