[package]
name = "continuate-error"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky.workspace = true
strum = { version = "0.27.1", features = ["derive"] }

[lints]
workspace = true
