[package]
name = "continuate-error"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
chumsky.workspace = true
strum = { version = "0.28.0", features = ["derive"] }

[lints]
workspace = true
