[package]
name = "continuate-ir"
version.workspace = true
edition = "2021"

[dependencies]
bimap = "0.6.3"
continuate-arena = { version = "0.1.0", path = "../continuate-arena" }
continuate-error = { version = "0.1.0", path = "../continuate-error" }
itertools = { workspace = true }

[lints]
workspace = true
