[package]
name = "continuate-ir"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo.workspace = true
continuate-error.workspace = true
continuate-frontend.workspace = true
continuate-utils.workspace = true
hashbrown.workspace = true
itertools.workspace = true

[lints]
workspace = true
