[package]
name = "continuate-rt"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bytemuck = "1.22.0"
nohash-hasher = "0.2.0"
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
