[package]
name = "continuate-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ahash = { version = "0.8.12", default-features = false, features = ["std"] }
bytemuck = "1.22.0"
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
