[package]
name = "continuate-rt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[features]
object = []

[dependencies]
bytemuck = "1.25.0"
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
