[package]
name = "continuate-utils"
edition = "2024"
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo.workspace = true
hashbrown = { version = "0.15.2", default-features = false, features = [
    "inline-more",
    "nightly",
] }

[lints]
workspace = true
